# chaos-ray-tracing-course-assignment-DanielHalachev

./: .gitignore  README.md
Images/HW03/: overflowTracer400x300.ppm
SourceCode/: CMakeLists.txt  Image.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Triangle.cpp  Triangle.h  main.cpp
SourceCode/HW02/: .clang-tidy  CMakeLists.txt  CircleGenerator.h  Color.h  RectangleGenerator.h  main.cpp
SourceCode/app/: dynpol.txt  main.cpp  results.txt
SourceCode/include/tracer/: Image.h  Matrix.h  Ray.h  RayTracer.h  SceneParser.h  SceneSettings.h  Triangle.h  Utils.h  Vector.h
SourceCode/src/: CMakeLists.txt  Camera.cpp  Ray.cpp  RayTracer.cpp  SceneParser.cpp  Triangle.cpp  Utils.cpp  Vector.cpp
